--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;400&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav></nav>
+        <img src="./assets/images/Logo.svg" alt="logo batatabit">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="#" class="header--button">Conoce Nuestros Planes <span></span> </a>
+        </div>
     </header>
     <main>
         <section>
-            <h1>hola</h1>
         </section>
         <section></section>
         <section></section>
