--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;400&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -24,7 +22,81 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="main--exchange-container">
+            <div class="backgroundImg"></div>
+            <div class="main--exchange-container-title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left" >Bitcoin</td>
+                                <td class="table__top-right table__right">$1.96 
+                                    <span class="trading-down-icon trade-icon-container"></span> 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right">$0.07 
+                                    <span class="trading-up-icon trade-icon-container"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td cl>Ripple</td>
+                                <td class="table__right">$2.15 <span class="trading-down-icon trade-icon-container "></span> 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="table__botton-left">Stellar</td>
+                                <td class="table__botton-right table__right">$4.96 
+                                    <span class="trading-down-icon trade-icon-container"></span> </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p>
+                            <b>Actualizado:</b> 19 Julio 23:45
+                        </p>
+                    </div>
+                </div>
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Corredoras</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left" >Bitrade</td>
+                                <td class="table__top-right table__right">$1.96     
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$0.07 
+                                   
+                                </td>
+                            </tr>
+                            <tr>
+                                <td cl>Novadax</td>
+                                <td class="table__right">$2.15  
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="table__botton-left">Cointext</td>
+                                <td class="table__botton-right table__right">$4.96 
+                                 </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p>
+                            <b>Actualizado:</b> 19 Julio 23:45
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
         <section></section>
         <section></section>
